GNOME Dictionary 3.25.90                                              2017-08-09
================================================================================
• The GDict library is now private for GNOME Dictionary, and it is not
  installed any more
• The "Description" key for dictionary sources has been deprecated, and
  replaced with the "Comment" one, to allow for localisation with Gettext
• GNOME Dictionary does not depend on intltool for builds
• GNOME Dictionary switched to the Meson build system from Autotools
• Use natural_width for database popover (#777584)
• Fix typos in manual (#766412)
• Fix displaying the program name in the about dialog (#784343)

Updated translations
  Catalan, Norwegian bokmål, Greek, Croatian, Polish, Belarusian, Indonesian,
  Friulian, Slovenian, German, Hungarian, Spanish, Kazakh, Catalan, Czech,
  Swedish

GNOME Dictionary 3.24.0                                               2017-03-20
================================================================================
Application
 * Move more UI into the XML template (Emmanuele Bassi)
 * Fix the DatabaseChooserButton construction (Emmanuele Bassi)
 * Remove unused app menu item (Emmanuele Bassi)
 * Store the appropriate window size (Emmanuele Bassi)
 * Bump up the dependency on GLib and GTK+ (Emannuele Bassi)
 * Use Unicode in translatable strings (Piotr Drąg)
 * Add Ctrl+Q keyboard accelerator quit shortcut (Felipe Borges)
 * Add Flatpak manifest (Emmanuele Bassi)
 * Use gtk_show_uri_on_window() with newer GTK+ (Emmanuele Bassi)
 * Use gtk_menu_popup_at_widget() with newer GTK+ (Emmanuele Bassi)
 * Add Language headers to po files (Piotr Drąg)

Library
 * Use appropriate sizing for DB chooser (Emmanuele Bassi)
 * Use get_instance_private() (Emmanuele Bassi)
 * Fix DatabaseChooserButton annotations (Emmanuele Bassi)
 * Use a symbolic icon in DatabaseChooserButton (Emmanuele Bassi)
 * Include the right header in GdictClientContext (Emmanuele Bassi)

Translations